<resources>
    <string name="app_name">잡담</string>
    <string name="action_settings">Settings</string>
    <string name="my_job">내가 담은 채용 정보</string>
    <string name="card_box">나의 카드 박스</string>
    <string name="all_job">전체 채용 정보</string>
    <string name="board">잡담톡</string>
    <string name="announcement">알림통통</string>
    <string name="setting">설정</string>
    <!-- activity name-->
    <string name="detail_job_info">상세채용정보</string>
    <!-- detail job info category -->
    <string name="qualification">지원자격</string>
    <string name="conditions">근무조건</string>
    <string name="period">접수기간</string>
    <string name="detail_page">상세페이지</string>
    <string name="questions">자기소개서 항목</string>
    <string name="scrap">스크랩</string>
    <string name="homepage">홈페이지</string>
    <string name="experience_level"><![CDATA[<strong>경력</strong>]]></string>
    <string name="education_level"><![CDATA[<strong>학력</strong>]]></string>
    <string name="location"><![CDATA[<strong>지역</strong>]]></string>
    <string name="salary"><![CDATA[<strong>급여</strong>]]></string>
    <string name="preparation"><![CDATA[준비중입니다...!]]></string>

    <!-- setting activity-->
    <string name="help_desk">Help Desk</string>
    <string name="privacy">Privacy</string>
    <string name="legal">Legal</string>
    <string name="alarm">알림 설정</string>
    <string name="version">Version</string>
    <!-- Category Name-->
    <string name="category_private">개인 신상</string>
    <string name="category_intern">인턴/아르바이트</string>
    <string name="category_study">학업</string>
    <string name="category_win">수상경력</string>
    <string name="category_activity">교내/외 활동</string>
    <string name="category_abroad">해외 경험</string>
    <string name="category_etc">기타</string>

    <!-- floating button label-->
    <string name="write_card">카드 작성</string>
    <string name="add_cartegory">카테고리 추가</string>
    <string name="add_card">카드 추가</string>
    <string name="add_question">자기소개서 질문 추가</string>
    <string name="delete_question">자기소개서 질문 삭제</string>

    <!-- login -->
    <string name="input_info">정보 입력</string>
    <string name="agreement">약관 동의</string>
    <string name="user_agreement_check">동의합니다. (필수 항목)</string>
    <string name="user_name">이름을 입력해 주세요.</string>
    <string name="user_email">이메일 주소를 입력해 주세요.</string>
    <string name="user_password">비밀번호를 입력해 주세요.</string>
    <string name="user_password_check">비밀번호를 한 번 더 입력해 주세요.</string>
    <string name="submit_user_info">입력 완료</string>
    <string name="no_user">로그인 실패! 존재하지 않는 아이디입니다.</string>
    <string name="diff_pw">로그인 실패! 비밀번호가 다릅니다.</string>
    <string name="missing_credentials">계정 정보를 입력해주세요.</string>

    <!-- actionbar menu  -->
    <string name="menu_save">저장</string>
    <string name="menu_cancel">취소</string>
    <string name="attach_card">첨부</string>
    <string name="menu_delete">삭제</string>
    <string name="menu_move">이동</string>
    <string name="menu_modify">수정</string>

    <!-- Job List Header -->
    <string name="order_latest">최신순</string>
    <string name="order_dead_line">마감순</string>

    <string name="monthly">월간</string>
    <string name="weekly">주간</string>

    <!-- dialog -->
    <string name="dialog_delete_title">삭제하시겠습니까?</string>
    <string name="dialog_delete_sub_title">삭제된 데이터는 복구되지 않습니다.</string>
    <string name="dialog_delete_yes">삭제</string>
    <string name="dialog_delete_no">취소</string>
    <string name="dialog_save_title">저장하시겠습니까?</string>
    <string name="dialog_save_sub_title">변경된 내용이 저장됩니다.</string>
    <string name="dialog_save_yes">저장</string>
    <string name="dialog_save_no">닫기</string>
    <string name="dialog_save_cancel">취소</string>
    <string name="dialog_close">닫 기</string>
    <string name="dialog_question_list_title">질문 수정</string>
    <string name="dialog_category_list_title">카테고리 선택</string>

    <!-- Check Message-->
    <string name="check_scrap">스크랩 되었습니다.</string>
    <string name="check_not_scrap">이미 스크랩 되어있습니다.</string>

    <!-- Alert String -->
    <string name="page_not_find">페이지가 존재 하지 않습니다.</string>


    <!-- Service Agreement -->
    <string name="text_user_agreement"><![CDATA[이 약관은 (주)잡담(이하 "회사")에서 제공하는 서비스\n
        "잡담"의 이용과 관련하여 회사와 고객간의 권리, 의무 및\n
        기타 필요한 제반 사항을 정하고 있습니다. 서비스를 이용하시기\n 전에 이 약관을 주의 깊게 읽어 보시기
        바라며, 자세한 내용은\n <font color="#0db5f7">이 곳</font>을 클릭해 확인하여 주시기 바랍니다.]]>
    </string>
    <string name="text_private_info"><![CDATA[(주)잡담(이하 "회사")는 원활한 서비스의 이용을 위하여 다음과\n
                                같이 이용자의 개인정보를 수집, 이용함에 있어 정보통신망\n
                                이용 촉진 및 정보 보호 등에 관한 법률, 개인정보 보호법 등 관련\n
                                법령에 따라 개인정보 수집 및 이용에 관하여 동의를 받고\n
                                있습니다. 자세한 내용은 <font color="#0db5f7">이 곳</font>을 클릭해 확인하여 주시기\n
                                바랍니다.]]></string>

    <string name="emotion_select_message">현재 내 기분을 선택해주세요</string>


</resources>
