<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camara"
            android:icon="@drawable/icon_menu_ndc"
            android:title="@string/my_job"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/icon_menu_ncb"
            android:title="@string/card_box"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/icon_menu_jcj"
            android:title="@string/all_job"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/icon_menu_jdt"
            android:title="@string/board"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/icon_menu_at"
            android:title="@string/announcement"/>
    </group>
</menu>