<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             tools:context="com.example.androidchoi.jobdam.LogIn.InputUserInfoFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_input_user_info"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:layout_gravity="left|top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/font_size_title"
            android:text="@string/input_info"/>

    </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="left|top"
        android:layout_weight="2"
        android:background="@color/colorPrimary">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="@dimen/login_profile"
                android:layout_height="@dimen/login_profile"
                android:id="@+id/imageView8"
                android:background="#939393"/>

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:id="@+id/imageView9"
                android:layout_gravity="right|bottom"
                android:background="#000000"/>
        </FrameLayout>


    </RelativeLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="@dimen/login_layout_padding">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:layout_gravity="center_horizontal"
            android:hint="@string/user_name"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText4"
            android:layout_gravity="center_horizontal"
            android:hint="@string/user_email"
            android:layout_below="@+id/editText3"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText5"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:hint="@string/user_password"
            android:layout_below="@+id/editText4"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText6"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:hint="@string/user_password_check"
            android:layout_below="@+id/editText5"
            android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_user_info"
            android:id="@+id/btn_input_complete"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>

    </RelativeLayout>

</LinearLayout>
